# SlabWalk-artifact

./: .gitignore  ARTIFACT.md  LICENSE  README.md  SHA256SUMS  artifact_manifest.json  requirements.txt
experiments/sigmetrics/: aggregate_frontier_repeats.py  amend_worker_scaling_assembler_v2.py  amend_worker_scaling_parser.py  amend_worker_scaling_parser_v2.py  amend_worker_scaling_runner.py  amend_worker_scaling_tool.py  archive_worker_scaling_failed_run.py  assemble_vldb_10m_build_scaling.py  assemble_vldb_build_cost.py  assemble_vldb_frontier_1m.py  assemble_vldb_frontier_bundle.py  assemble_vldb_lifecycle_controls.py  assemble_vldb_manuscript_claims.py  assemble_vldb_query_pools.py  assemble_vldb_query_profile.py  assemble_vldb_worker_scaling.py  bind_vldb_frontier_1m_gate.py  bind_vldb_physical_design_advisor_gate.py  build_dhnsw_10m_baseline.sh  build_frontier_indexes.sh  collect_frontier_curves.py  compare_vldb_frontier_candidate.py  dhnsw_supplement_summary.py  fingerprint_query_pool.py  generate_vldb_1m_query_pools.py  generate_vldb_final_figures.sh  launch_parallel_dhnsw_10m_node7.sh  launch_parallel_sift10m_index_node4.sh  launch_parallel_tti10m_index_node3.sh  launch_vldb_frontier_1m_candidate.sh  launch_vldb_v5_frontier_systemd.sh  launch_vldb_worker_scaling_node3.sh  main_eval_plots.py  measurement_rigor_summary.py  package_public_artifact.py  package_vldb_overleaf.py  parse_dhnsw_frontier.py  parse_dhnsw_worker_scaling.py  physical_design_advisor.py  plot_vldb_build_pipeline.py  (+188 more)
experiments/tools/: build_hnswlib_index.py  convert_hnswlib_dump.cc  generate_exact_fbin_gt.py  repartition_hnsw_dump.py  test_build_hnswlib_index.py  test_convert_hnswlib_dump.py  test_generate_exact_fbin_gt.py  test_repartition_hnsw_dump.py
graphbeyond/: .clang-format  .gitignore  CMakeLists.txt  CODE_MAP.md  GRAPHBEYOND_README.md  README.md
graphbeyond/experiments/: test_quant.cc
graphbeyond/rdma-library/: CMakeLists.txt  FindIBVerbs.cmake  README.md
graphbeyond/scripts/: benchmark.py  build.py  check_hugepages.py  config.py  datasets.py  deploy_mn.sh  exp_cache_size_and_skew.py  exp_csp_increase_cns.py  exp_scalability.py  fetch_cache_size.py  fetch_csp.py  fetch_csp_increase_cns.py  fetch_scalability.py  fetch_skew.py  k_sweep_v3.sh  k_sweep_v4.sh  kill.py  remote.sh  requirements.txt  run_node.py  set_hugepages.py  vmtouch.py  vmtouch_wait.py
graphbeyond/scripts/data/: README.md  convert_format.py  create_queries.py  download.sh  gt_bruteforce.py  skew.py  slice.py
graphbeyond/src/: buffer_allocator.hh  compute_node.cc  compute_node.hh  compute_thread.hh  coroutine.hh  main.cc  memory_node.hh  remote_pointer.hh  shared_context.hh  worker_pool.hh
graphbeyond/src/cache/: cache.hh  cache_entry.hh  cooling_table.hh  kmeans.hh  lock.hh  placement.hh  tagged_ptr.hh
graphbeyond/src/common/: configuration.hh  constants.hh  core_assignment.cc  core_assignment.hh  debug.hh  evidence_hash.hh  fastset.hh  index_region_capacity.hh  quant.hh  quantile.hh  query_contexts.hh  result_fingerprint.hh  slot_bitmap.hh  startup_wire.hh  statistics.hh  timing.cc  timing.hh  types.hh
graphbeyond/src/crane/: crane.hh
graphbeyond/src/hnsw/: distance.hh  heap.hh  hnsw.hh  scheduler.hh
graphbeyond/src/io/: database.hh  deserializer.hh  read_data.hh
graphbeyond/src/lavd/: build.hh  build_reorder.hh  build_snapshot.hh  config.hh  layout.hh  maintenance_guard.hh  materialization_policy.hh  native_descriptor.hh  native_export.hh  native_owner.hh  or_probe.hh  parallel_build.hh  parallel_indegree.hh  pq.hh  queue_budget.hh  rabitq.hh  region_capacity.hh  reorder_layout.hh  staged_io.hh
graphbeyond/src/node/: neighborhood.hh  neighborlist.hh  node.cc  node.hh  node_utils.hh  reorder_block.hh
graphbeyond/src/rdma/: rdma_atomics.hh  rdma_operations.hh  rdma_reads.hh  rdma_writes.hh
graphbeyond/src/router/: message_wrapper.hh  query_router.hh
graphbeyond/tests/: README.md  build_snapshot_test.cc  evidence_hash_test.cc  index_region_capacity_test.cc  latency_quantile_test.cc  maintenance_guard_test.cc  materialization_policy_test.cc  native_descriptor_test.cc  native_export_test.cc  native_owner_test.cc  native_region_capacity_test.cc  neighborhood_entry_decode_test.cc  parallel_build_test.cc  parallel_indegree_test.cc  pq_test.cc  query_contexts_test.cc  query_result_fingerprint_test.cc  queue_budget_test.cc  rabitq_rotation_reuse_test.cc  staged_io_test.cc  startup_wire_test.cc
paper_vldb/: CLAIM_EVIDENCE_LEDGER.md  PVLDB_SCOPE_SELF_ASSESSMENT.md  generated_claims.tex  main.tex  pvldb.sty  refs.bib
paper_vldb/figs/: gen_vldb_design_figures.py
results/vldb_final_evidence/: evidence_gate.json  frontier_1m_gate.json  headline_candidates.json  manuscript_claims.json  release_bundle.json
results/vldb_final_evidence/build_cost/: PROVENANCE.json  README.md  SHA256SUMS  runs.csv  stage_breakdown.csv  summary.csv
results/vldb_final_evidence/build_scaling_10m/: PROVENANCE.json  README.md  SHA256SUMS  campaign.json  runs.csv  summary.csv
results/vldb_final_evidence/cache_control/: campaign.json  queue_sources.sha256
results/vldb_final_evidence/colocation_control/: campaign.json
results/vldb_final_evidence/frontier/: PROVENANCE.json  SHA256SUMS  campaign.json  frontier_repeated_raw.csv  frontier_summary.csv
results/vldb_final_evidence/frontier_1m/: PROVENANCE.json  SHA256SUMS  campaign.json  frontier_repeated_raw.csv  frontier_summary.csv
results/vldb_final_evidence/index_construction/: README.md
results/vldb_final_evidence/lifecycle_controls/: manifest.json  refresh.csv  tti.csv
results/vldb_final_evidence/mechanism_controls/: campaign.json
results/vldb_final_evidence/model_controls/: PROVENANCE.md  rdma_tau_runs.csv  summary.md
results/vldb_final_evidence/query_pools/: PROVENANCE.json  README.md  SHA256SUMS  VALIDATION.json  deep10m_dhnsw.json  deep10m_shine.json  deep10m_slabwalk.json  (+7 more)
results/vldb_multicn_formal_20260719f/: MULTICN_SEALED.json  MULTICN_SHA256SUMS  campaign.json  independent_recompute.json  query_pools.json  resume_context.json  runs.csv
(+2807 files in other folders)
